--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,16 +1,3 @@
-{% assign post = page %}
-{% if post.tags.size > 0 %}
-    {% capture tags_content %}{% if post.tags.size == 1 %}<i class="fa fa-tag"></i>{% else %}<i class="fa fa-tags"></i>{% endif %} {% endcapture %}
-    {% for post_tag in post.tags %}
-        {% assign tag = site.tags[post_tag] %}
-        {% if tag %}
-            {% capture tags_content_temp %}{{ tags_content }}<a href="/blog/tag/{{ tag | slugify }}/">{{ tag }}</a>{% if forloop.last == false %}, {% endif %}{% endcapture %}
-            {% assign tags_content = tags_content_temp %}
-        {% endif %}
-    {% endfor %}
-{% else %}
-    {% assign tags_content = '' %}
-{% endif %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -31,7 +18,7 @@
                 {% endif %}
             {% endif %}
             <p id="post-meta"><small>Posed on {{ page.date | date: '%B %d, %Y' }} by <a href="http://peter.solymos.org">P&eacute;ter S&oacute;lymos</a><br />
-            {% if page.category %}<a href="#" class="btn btn-info btn-xs">{{ page.category }}</a>{% endif %}{% if page.tags %} {% endif %}</small></p>
+            {% if page.category %}<a href="#" class="btn btn-info btn-xs">{{ page.category }}</a>{% endif %}{% if page.tags %} {% for tag in page.tags %}<a href="#" class="btn btn-success btn-xs">{{ tag }}</a>{% endfor %}{% endif %}</small></p>
 <!-- content starts here %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -->
 
             {{ content }}
