--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -29,13 +29,13 @@
 <div id="disqus_thread"></div>
 <script>
 var disqus_config = function () {
-  this.page.url = {{ site.baseurl }}{{ page.url }};
+  this.page.url = {{ page.url }};
   this.page.identifier = {{ page.title | slugify }};
 };
 (function() { // DON'T EDIT BELOW THIS LINE
 var d = document, s = d.createElement('script');
 
-s.src = '//{{ site.disqus }}.disqus.com/embed.js';
+s.src = '//{% if page.disqus %}{{ page.disqus }}{% else %}{{ site.disqus }}{% endif %}.disqus.com/embed.js';
 
 s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
