--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -43,7 +43,7 @@
             	<li><a href="{{ site.baseurl }}/issues.html">Issues</a></li>
               </ul>
             </li>
-            <li><a href="{{ site.baseurl }}/blog/">Blog</a></li>
+            <!-- <li><a href="{{ site.baseurl }}/blog/">Blog</a></li> -->
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="{{ site.baseurl }}/search.html">Search</a></li>
