--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -27,6 +27,7 @@
 
 <!-- content ends here %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -->
 
+{% if site.disqus or page.disqus %}
 <div id="disqus_thread"></div>
 <script>
 var disqus_config = function () {
@@ -43,6 +44,7 @@ s.setAttribute('data-timestamp', +new Date());
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+{% endif %}
 
         </div>
     </div>
