--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,13 @@
 <!-- content ends here %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -->
         </div>
     </div>
+    {% if site.ads %}
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+        {% include _ads.html %}
+        </div>
+    </div>
+    {% endif %}
 </div>
 {% include _footer.html %}
 </body>
