--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -58,3 +58,6 @@
     }
 </style>
 <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico">
+<!-- Fathom - beautiful, simple website analytics -->
+<script src="https://cdn.usefathom.com/script.js" data-site="DWNHVCJN" defer></script>
+<!-- / Fathom -->
